# netflow_ndpi

./: README.md  TODO  pyproject.toml
docs/: pypy.md
src/cicflowmeter/: flow.py  flow_session.py  sniffer.py
src/cicflowmeter/features/context/: __init__.py
src/netflow/: constants.py  flow.py  flow_session.py  sniffer.py  utils.py  web_gui.py
src/netflow/features/: packet_count.py  packet_length.py  packet_time.py  response_time.py
src/netflow/flows/: .placeholder
src/netflow/models/: best_catboost_classifier_unsw_fuse.cbm  best_dgi_CSE_anomaly_merged_traffic.pkl  best_dgi_CSE_anomaly_v2.pkl  best_dgi_CSE_anomaly_v3.pkl  best_dgi_CSE_multiclass_merged_traffic.pkl  best_dgi_CSE_multiclass_v2.pkl  best_dgi_CSE_multiclass_v3.pkl  best_dgi_CSE_real_traffic.pkl
src/netflow/static/js/: application.js
src/netflow/templates/: detail.html  index.html
