[project]
name = "netflow"
version = "1.1.0"
description = "NetFlow Python Implementation"
authors = [{ name = "Kien Ho", email = "channelback546@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.23.0,<2.0", # 1.23+ is stable on PyPy 3.11, <2.0 avoids breaking changes
    "scapy>=2.5.0",
    "requests>=2.31.0",
    "ndpi",
    "flask>=2.0.0",
    "flask-socketio>=5.0.0",
    "pandas>=1.5.0",
    "networkx>=2.8.0",
    "category-encoders>=2.5.0",
    "scikit-learn>=1.2.0",
    "catboost>=1.2.0",
    "plotly>=5.0.0",
    "torch==2.4.0",
    "dgl==2.4.0+cu121",
]
changelog = "CHANGELOG.md"
homepage = "https://github.com/KienHoSD/netflow_ndpi"
repository = "https://github.com/KienHoSD/netflow_ndpi"

[project.scripts]
netflow = "netflow.sniffer:main"

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
ndpi = { path = "../nDPI/python" }
